# proc-assertions

./: Cargo.toml  README.md
src/: calledby.rs  calls.rs  consumes.rs  lib.rs  mutatedby.rs  mutates.rs  private_fields.rs
src/macros/: calls.rs  consumes.rs  mod.rs  mutates.rs  private_fields.rs  size_align.rs
src/parser/: field_whitelist.rs  mod.rs  whitelist.rs
tests/: calledby.rs  calls.rs  consumes.rs  mutatedby.rs  mutates.rs  nomutates.rs  private.rs  size.rs
